Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83732

Qml WebEngine audioMuted property couldn't be set until page loaded

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.1
    • 5.14.2, 5.15.0 Beta4
    • WebEngine
    • None
    • Raspberry Pi 4 / Raspbian 10 / X11 EGLFS
    • Linux/X11
    • 58cd21c0aa7a9dc5a18ea411dcf462a2ee8193f6 (qt/qtwebengine/5.15)

    Description

      Steps to reproduce:

      1. Create a QML file with WebEngineView playing Youtube video

      2. Set property `audioMuted` of WebEngineView to `true`

      3. Run the QML file with qmlscene

       

      Expected results:

      Video playback is muted

       

      Actual results:

      Video playback is not muted

      Settings `audioMuted` to `true` at `Component.onCompleted` also doesn't work
      Settings `audioMuted` to `true` at `onLoadingChanged` works

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            romanvalov Roman Valov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes