Fix setting WebEngineView.audioMuted before initialization

Fixes: QTBUG-83732
Change-Id: Ie07a1ecf87b214436ab7cea07003ddd5aeaedda3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>