src/webengine/api/qquickwebengineview.cpp
@@ -129,6 +129,7 @@ QQuickWebEngineViewPrivate::QQuickWebEngineViewPrivate()
     , devicePixelRatio(QGuiApplication::primaryScreen()->devicePixelRatio())
     , m_webChannel(0)
     , m_webChannelWorld(0)
+    , m_defaultAudioMuted(false)
     , m_isBeingAdopted(false)
     , m_backgroundColor(Qt::white)
     , m_zoomFactor(1.0)
@@ -906,6 +907,9 @@ void QQuickWebEngineViewPrivate::initializationFinished()
         adapter->setWebChannel(m_webChannel, m_webChannelWorld);
 #endif
 
+    if (m_defaultAudioMuted != adapter->isAudioMuted())
+        adapter->setAudioMuted(m_defaultAudioMuted);
+
     if (devToolsView && devToolsView->d_ptr->adapter)
         adapter->openDevToolsFrontend(devToolsView->d_ptr->adapter);
 
@@ -1426,15 +1430,18 @@ void QQuickWebEngineView::setBackgroundColor(const QColor &color)
 bool QQuickWebEngineView::isAudioMuted() const
 {
     const Q_D(QQuickWebEngineView);
-    return d->adapter->isAudioMuted();
+    if (d->adapter->isInitialized())
+        return d->adapter->isAudioMuted();
+    return d->m_defaultAudioMuted;
 }
 
 void QQuickWebEngineView::setAudioMuted(bool muted)
 {
     Q_D(QQuickWebEngineView);
-    bool wasAudioMuted = d->adapter->isAudioMuted();
+    bool wasAudioMuted = isAudioMuted();
+    d->m_defaultAudioMuted = muted;
     d->adapter->setAudioMuted(muted);
-    if (wasAudioMuted != d->adapter->isAudioMuted())
+    if (wasAudioMuted != isAudioMuted())
         Q_EMIT audioMutedChanged(muted);
 }
 
